--- a/src/Pages/Project.css
+++ b/src/Pages/Project.css
@@ -14,6 +14,7 @@
 }
 
 .project-header .page-heading {
+  padding-top: 1rem;
   color: #fff;
 }
 .project-line {
